Refactor category and menu management: update controllers, services, and mappers to support batch operations and improve response handling; enhance DTOs with availability and image URL fields.