@@ -1,12 +1,7 @@
 package com.restaurantbackend.restaurantbackend.subcategory;
-
-import com.restaurantbackend.restaurantbackend.menu.MenuItemDTO;
 import com.restaurantbackend.restaurantbackend.menu.MenuMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -20,10 +15,11 @@ public class SubCategoryMapper {
         dto.setName(subCategory.getName());
 
         if (subCategory.getMenuItems() != null) {
-            List<MenuItemDTO> menuItems = subCategory.getMenuItems().stream()
-                    .map(menuMapper::toDTO)
-                    .collect(Collectors.toList());
-            dto.setMenuItems(menuItems);
+            dto.setMenuItems(
+                    subCategory.getMenuItems().stream()
+                            .map(menuMapper::toDTO)
+                            .toList()
+            );
         }
 
         return dto;
@@ -31,27 +27,10 @@ public class SubCategoryMapper {
 
     public SubCategory toEntity(SubCategoryDTO dto) {
         SubCategory subCategory = new SubCategory();
-
         if (dto.getId() != null) {
             subCategory.setId(dto.getId());
         }
-
         subCategory.setName(dto.getName());
-
-        if (dto.getMenuItems() != null) {
-            List<MenuItemDTO> items = dto.getMenuItems();
-            List<com.restaurantbackend.restaurantbackend.menu.MenuItem> menuItems = items.stream().map(itemDTO -> {
-                com.restaurantbackend.restaurantbackend.menu.MenuItem menuItem = new com.restaurantbackend.restaurantbackend.menu.MenuItem();
-                menuItem.setName(itemDTO.getName());
-                menuItem.setPrice(itemDTO.getPrice());
-                menuItem.setDescription(itemDTO.getDescription());
-                menuItem.setSubCategory(subCategory);
-                return menuItem;
-            }).collect(Collectors.toList());
-
-            subCategory.setMenuItems(menuItems);
-        }
-
         return subCategory;
     }
 }
